Andon (31/Jan/02)
-------------------

I'm back! <grins>..

Additions
 + --enable-cgi-icons to configure, see configure --help..

Bug Fixes
 + Fixed a few instances in the CGIs where 'cout' calls should have been
   calls to 'out'..
 + Optimized portions of the OpCode monitor slightly, saving up to 3-bytes
   per loop iteration (during the initial list parsing and reloading).

ratt (28/Jan/02)
--------------------

Added Yendors corpse movement patch
Added Yendors newCorpsespawn struct patch

fee (26/01/02)
--------------------

 updated and added several luclin maps

cjd1 (23/01/02)
--------------------

Additions
 + Window geometry is saved better, see new entries in conf/showeq.conf.
 + QListView columns orders are preserved, drag/drop them to rearrange.

fee (21/01/02)
--------------------

Mods.
 + Applied patch #500653, Fix for deque.h problems.
 + Applied patch #500732, Fix for QT 3.0.1 and QT lib search.
 + Applied patch #500538, Fix Quick Spawn Display Issue
 + Applied patch #504970, PktLogger Pretty Printer Patch
 + Applied patch #505115, fix eqTime display

Thank you all for submitting these much needed patches. If I have not
gotten to yours yet, please be patient. I evaluate each patch as I have
time.  I promise I will get to it sooner or later. Keep up the good work!

fee (17/01/02)
--------------------

Additions
 + applied patch #502126 by Yendor, this patch introduces an advanced
   packet logging facility. This patch adds 2 definitions to showeq.conf
   PktLoggerMask and PktLoggerFilename. See the patch manager, logger.h 
   and showeq.conf.dist for details.  Great addition Yendor!


Modifications
 + patch #502126 extensivley modifies opcode and structure names. If you have
   submitted prior patches that have not been accepted at this time, then please
   review your changes for compatibility.

 + slipped in some changes from patch #503766, redefining the ITEM_xxxx.

fee (14/01/02)
--------------------

Mods