@@ -1,3 +1,8 @@
+ratt (31/Jan/02)
+-------------------
+
+Applied Yendor's spawn logging patch
+
 Andon (31/Jan/02)
 -------------------
 
